--- a/template.tex
+++ b/template.tex
@@ -94,20 +94,22 @@
 
 \chapter{Álgebra Lineal}
 \section{Conjuntos}
-Un conjunto es una colección de objetos, que llamamos elementos. De ahora en adelante nos referiremos a los conjuntos con una letra mayúscula ($A,B,C,\ldots $). Mientras que los elementos se escribirán con letras minúsculas ($a_1, a_2, a_3, \ldots, a_n \in A$).
+\dfn{Conjunto}{Un conjunto es una colección de objetos, que llamamos elementos.} De ahora en adelante nos referiremos a los conjuntos con una letra mayúscula ($A,B,C,\ldots $). Mientras que los elementos se escribirán con letras minúsculas ($a_1, a_2, a_3, \ldots, a_n \in A$).
 \subsection{Operaciones}
-\subsubsection{Unión}
+\dfn{Unión}{
 La operación de unión se realiza entre conjuntos, y su símbolo es $\cup$.
 \[ 
 	A \cup B = \left\{x_i \mid x_i \in A \lor x_i \in B \right\}
 .\]
-\subsubsection{Intersección}
+}
+\dfn{Intersección}{
 La operación de intersección se realiza entre conjuntos, y su símbolo es $\cap$
 \[ 
 	A \cap B = \left\{x_i \mid x_i \in A \land x_i \in B \right\}
 .\]
-\subsubsection{Cardinalidad}
-Se puede entender la cardinalidad de un conjunto finito, por la cantidad elementos que lo conforman. La cardinalidad es denotada por $|A|$ donde $A$ es un conjunto.
+}
+\dfn{Cardinalidad}{
+Se puede entender la cardinalidad de un conjunto finito, por la cantidad elementos que lo conforman. La cardinalidad es denotada por $|A|$ donde $A$ es un conjunto.}
 \ex{Cardinalidad}{
 \begin{align}
 	A &= \left\{a_1, a_2, a_3, a_4, a_5\right\}\\
@@ -122,8 +124,9 @@ $|A| = |B|$
 \dfn{$|A| \leq |B|$}{
 La cardinalidad de $A$ es menor que o igual a la de $B$ si existe una función inyectiva de $A$ a $B$ es decir existe una función que asigna todos los elementos de $A$ a $B$ de forma única pero la imagen de la función no abarca todo el conjunto $B$.
 }
-\subsubsection{Conjunto Potencia}
-Denotado por $P(A)$ donde $A$ es un conjunto, este esta compuesto por todos los subconjuntos de $A$ y el vacío.
+\dfn{Conjunto Potencia}{
+Denotado por $P(A)$ donde $A$ es un conjunto, este esta compuesto por todos los subconjuntos de $A$ y el vacío.}
+\ex{Conjunto Potencia}{
 \begin{align} 
 	A &= \left\{a_1, a_2, a_3\right\}\\
 	P(A) &= \left\{\emptyset,
@@ -136,9 +139,12 @@ Denotado por $P(A)$ donde $A$ es un conjunto, este esta compuesto por todos los 
 \left\{a_1, a_2, a_3\right\}
 \right\}
 \end{align}
+}
+\nt{
 El conjunto poder $P(A)$ tiene una cardinalidad de $2^n$ donde $n$ es la cardinalidad de $A$.
-
+}
 \section{Grupo}
+\dfn{Grupo}{
 Un grupo es un conjunto con una operación ($f(x,y)$) que satisface algunas condiciones.
 \begin{itemize}
 \item De un elemento del conjunto se puede llegar al otro con la operación.
@@ -146,7 +152,8 @@ Un grupo es un conjunto con una operación ($f(x,y)$) que satisface algunas cond
 \item Existe un elemento neutro.
 \item La operación de dos elementos esta dentro del conjunto ($f(x,y) \in A \forall x,y \in A$)
 \end{itemize}
-Si la operación es conmutativa se le conoce como un Grupo Abeliano.
+}
+\nt{Si la operación es conmutativa se le conoce como un Grupo Abeliano.}
 \ex{$\mathbb{Z}$ y $+$}{
 	$\mathbb{Z}$ y la suma ($f(x,y) = x+y$) son un grupo abeliano.
 	\begin{itemize}
@@ -164,9 +171,9 @@ Si la operación es conmutativa se le conoce como un Grupo Abeliano.
 	\end{itemize}
 }
 \section{Vectores}
-Un vector es una lista (conjunto ordenado) de datos o cantidades que no se pueden expresar por una única cantidad. De ahora en adelante hablaremos de vectores euclidianos. Que tienen cantidades numéricas y una dimensión.
+\dfn{Vector}{Un vector es una lista (conjunto ordenado) de datos o cantidades que no se pueden expresar por una única cantidad. De ahora en adelante hablaremos de vectores euclidianos. Que tienen cantidades numéricas y una dimensión.}
 \subsection{Vectores Euclidianos}
-Un vector tiene una dirección y una magnitud. Este tipo de vectores se denotan de la forma $\vec a$.
+Un vector euclidiano tiene una dirección y una magnitud. Este tipo de vectores se denotan de la forma $\vec a$.
 \ex{Vector en $\mathbb{R}^2$}{
 \begin{wrapfigure}{l}{0pt}
 \centering
@@ -195,5 +202,14 @@ Por geometría la dirección sería
 	       &\approx 0.4636
 \end{align}
 \vspace{1cm}
+}
+\subsection{Productos internos}
+\dfn{Producto Interno}{
+Un producto interno denotado por $\left< \vec x, \vec y \right> $ donde $\vec x$ y $\vec y$ son vectores es una operación que cumple las siguientes propiedades
+\begin{itemize}
+	\item $\left< \vec x,\vec y \right> = \left< \vec y,\vec x \right>$
+	\item $\left< \vec x,\vec x \right> > 0 \mid x \neq \boldmath{0}$
+	\item $\left< a\vec x + b\vec z,\vec y \right> = a\left< \vec x, \vec y \right> + b\left<\vec z,\vec y \right>$
+\end{itemize}
 }
 \end{document}
