--- a/template.tex
+++ b/template.tex
@@ -10,6 +10,7 @@
 \usepackage{wrapfig}
 \usetikzlibrary{angles, quotes}
 
+\usepackage{subfiles}
 
 % \begin{algorithm}[H]
 % \KwIn{This is some input}
@@ -91,125 +92,13 @@
 \pdfbookmark[section]{\contentsname}{toc}
 \tableofcontents
 \pagebreak
-
+% Algebra lineal
 \chapter{Álgebra Lineal}
-\section{Conjuntos}
-\dfn{Conjunto}{Un conjunto es una colección de objetos, que llamamos elementos.} De ahora en adelante nos referiremos a los conjuntos con una letra mayúscula ($A,B,C,\ldots $). Mientras que los elementos se escribirán con letras minúsculas ($a_1, a_2, a_3, \ldots, a_n \in A$).
-\subsection{Operaciones}
-\dfn{Unión}{
-La operación de unión se realiza entre conjuntos, y su símbolo es $\cup$.
-\[ 
-	A \cup B = \left\{x_i \mid x_i \in A \lor x_i \in B \right\}
-.\]
-}
-\dfn{Intersección}{
-La operación de intersección se realiza entre conjuntos, y su símbolo es $\cap$
-\[ 
-	A \cap B = \left\{x_i \mid x_i \in A \land x_i \in B \right\}
-.\]
-}
-\dfn{Cardinalidad}{
-Se puede entender la cardinalidad de un conjunto finito, por la cantidad elementos que lo conforman. La cardinalidad es denotada por $|A|$ donde $A$ es un conjunto.}
-\ex{Cardinalidad}{
-\begin{align}
-	A &= \left\{a_1, a_2, a_3, a_4, a_5\right\}\\
-	|A| &= 5
-\end{align}
-}
-\dfn{
-$|A| = |B|$
-}{
-	La cardinalidad de $A$ es igual a la cardinalidad de $B$ si existe una función biyectiva entre sus elementos. Es decir si existe una función ($f$) cuya imagen asigne a todos los valores del conjunto $B$ únicamente a un valor en $A$ y vice-versa. Esto también implica que existe una función inversa ($f^{-1}$)
-}
-\dfn{$|A| \leq |B|$}{
-La cardinalidad de $A$ es menor que o igual a la de $B$ si existe una función inyectiva de $A$ a $B$ es decir existe una función que asigna todos los elementos de $A$ a $B$ de forma única pero la imagen de la función no abarca todo el conjunto $B$.
-}
-\dfn{Conjunto Potencia}{
-Denotado por $P(A)$ donde $A$ es un conjunto, este esta compuesto por todos los subconjuntos de $A$ y el vacío.}
-\ex{Conjunto Potencia}{
-\begin{align} 
-	A &= \left\{a_1, a_2, a_3\right\}\\
-	P(A) &= \left\{\emptyset,
-\left\{a_1\right\},
-\left\{a_2\right\},
-\left\{a_3\right\},
-\left\{a_1,a_2\right\},
-\left\{a_2,a_3\right\},
-\left\{a_1, a_3\right\},
-\left\{a_1, a_2, a_3\right\}
-\right\}
-\end{align}
-}
-\nt{
-El conjunto poder $P(A)$ tiene una cardinalidad de $2^n$ donde $n$ es la cardinalidad de $A$.
-}
-\section{Grupo}
-\dfn{Grupo}{
-Un grupo es un conjunto con una operación ($f(x,y)$) que satisface algunas condiciones.
-\begin{itemize}
-\item De un elemento del conjunto se puede llegar al otro con la operación.
-\item Todo elemento del conjunto tiene un inverso.
-\item Existe un elemento neutro.
-\item La operación de dos elementos esta dentro del conjunto ($f(x,y) \in A \forall x,y \in A$)
-\end{itemize}
-}
-\nt{Si la operación es conmutativa se le conoce como un Grupo Abeliano.}
-\ex{$\mathbb{Z}$ y $+$}{
-	$\mathbb{Z}$ y la suma ($f(x,y) = x+y$) son un grupo abeliano.
-	\begin{itemize}
-	\item Existe un neutro, 0. $f(x,0) = x$
-	\item Se puede llegar a todos los números desde uno dado
-		\begin{align}
-			\intertext{Con $x$ y $z$ dados y $x$ no es el neutro}
-			f(x,y) &= z\\
-			x+y &= z\\
-			y &= z-x
-			\intertext{Entonces encontramos un número $y\neq z$ por el cual podemos llegar a cualquier $z$ desde una $x$}
-		\end{align}
-	\item Todo número tiene su inverso.
-	\item La suma es conmutativa.
-	\end{itemize}
-}
-\section{Vectores}
-\dfn{Vector}{Un vector es una lista (conjunto ordenado) de datos o cantidades que no se pueden expresar por una única cantidad. De ahora en adelante hablaremos de vectores euclidianos. Que tienen cantidades numéricas y una dimensión.}
-\subsection{Vectores Euclidianos}
-Un vector euclidiano tiene una dirección y una magnitud. Este tipo de vectores se denotan de la forma $\vec a$.
-\ex{Vector en $\mathbb{R}^2$}{
-\begin{wrapfigure}{l}{0pt}
-\centering
-\begin{tikzpicture}
-	\draw (2,0) coordinate (A) -- (0,0) coordinate (B) -- (2,1) coordinate (C) pic ["$\theta$", draw, angle eccentricity=2] {angle};
-	\draw[black, ->] (-3,0) -- (3,0);
-	\draw[black, ->] (0,-3) -- (0,3);
-	\draw[red, -stealth] (0,0) -- (2,1) node[above] {$\vec a = \begin{bmatrix}
-	2\\
-	1\\
-	\end{bmatrix}$};
-	\draw[gray, |-|] (0,-0.1) -- (2,-0.1) node[midway, below] {$2$};
-	\draw[gray, |-|] (2.1,0) -- (2.1,1) node[midway, right] {$1$};
-	
-\end{tikzpicture}
-\end{wrapfigure}
-La magnitud de $\vec a$ se denota de la forma $|\vec a|$, en este caso sería.
-\begin{align}
-	|\vec a| &= \sqrt{2^2+1^2}\\
-		 &= \sqrt{5}
-\end{align}
-Por geometría la dirección sería
-\begin{align}
-	\tan{\theta} &= \frac{1}{2}\\
-	\theta &= \tan^{-1}{\frac{1}{2}}\\
-	       &\approx 0.4636
-\end{align}
-\vspace{1cm}
-}
-\subsection{Productos internos}
-\dfn{Producto Interno}{
-Un producto interno denotado por $\left< \vec x, \vec y \right> $ donde $\vec x$ y $\vec y$ son vectores es una operación que cumple las siguientes propiedades
-\begin{itemize}
-	\item $\left< \vec x,\vec y \right> = \left< \vec y,\vec x \right>$
-	\item $\left< \vec x,\vec x \right> > 0 \mid x \neq \boldmath{0}$
-	\item $\left< a\vec x + b\vec z,\vec y \right> = a\left< \vec x, \vec y \right> + b\left<\vec z,\vec y \right>$
-\end{itemize}
-}
+% Conjuntos
+\subfile{sections/conjuntos.tex}
+% Grupo
+\subfile{sections/grupos.tex}
+% Vectores
+\subfile{sections/vectores.tex}
+
 \end{document}
